--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "abundance": "^1.22.4",
+    "dayjs": "^1.8.13",
     "sodium-native": "^2.2.6",
     "ssb-revisions": "^1.2.1",
     "tre-client": "^2.2.0",
+    "tre-dates": "^1.0.0",
     "tre-fonts": "^1.6.1",
     "tre-images": "^1.13.0",
     "tre-stylesheets": "^1.3.3",
