Add calendar panel

--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "author": "Jan Bölsche <jan@lagomorph.de> (https://regular.codes/)",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
-    "abundance": "^1.22.4",
+    "abundance": "^1.23.0",
     "dayjs": "^1.8.13",
     "sodium-native": "^2.2.6",
     "ssb-revisions": "^1.2.1",
-    "tre-calendar": "^1.0.0",
+    "tre-calendar": "^1.3.0",
+    "tre-calendar-panel": "^1.0.0",
     "tre-client": "^2.2.0",
-    "tre-dates": "^1.0.0",
+    "tre-dates": "^2.1.0",
     "tre-fonts": "^1.6.1",
     "tre-images": "^1.13.0",
     "tre-stylesheets": "^1.3.3",
