--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tre-calendar": "^1.3.0",
     "tre-calendar-panel": "^1.0.0",
     "tre-client": "^2.2.0",
+    "tre-contacts": "^1.0.0",
     "tre-dates": "^2.1.0",
     "tre-fonts": "^1.6.1",
     "tre-images": "^1.13.0",
